--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
-
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+torch>=2.0.0
+transformers>=4.35.0
+langchain>=0.0.340
+openai>=1.3.0
+google-generativeai>=0.3.0
+nltk>=3.8.0
+spacy>=3.7.0
+opencv-python>=4.8.0
+mediapipe>=0.10.0
+streamlit-webrtc>=0.48.0
+plotly>=5.17.0
+altair>=5.2.0
+sqlalchemy>=2.0.0
+pymongo>=4.5.0
+web3>=6.0.0
+ipfshttpclient>=0.8.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pyjwt>=2.8.0
+bcrypt>=4.0.0
+python-dotenv>=1.0.0
