--- a/.env
+++ b/.env
@@ -1,1 +1,19 @@
+# Database
+DATABASE_URL=postgresql://user:password@localhost/campus_placement
 
+# AI Services
+OPENAI_API_KEY=your_openai_key
+GEMINI_API_KEY=your_gemini_key
+HUGGINGFACE_TOKEN=your_hf_token
+
+# Blockchain
+WEB3_PROVIDER_URL=https://mainnet.infura.io/v3/your_key
+CONTRACT_ADDRESS=0x...
+PRIVATE_KEY=your_private_key
+
+# Video Processing
+MEDIAPIPE_MODEL_PATH=models/
+
+# Security
+SECRET_KEY=your_secret_key
+JWT_SECRET=your_jwt_secret
