--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,47 @@
 # Core dependencies
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
+streamlit==1.52.2
+pandas==2.2.0
+numpy==1.26.0
 
-# ML/AI dependencies
-scikit-learn>=1.3.0
-xgboost>=2.0.0
-torch>=2.0.0
-transformers>=4.35.0
-langchain>=0.0.340
-openai>=1.3.0
-google-generativeai>=0.3.0
-
-# NLP dependencies
-nltk>=3.8.0
-spacy>=3.7.0
-
-# Computer Vision (commented out initially to avoid issues)
-# opencv-python>=4.8.0
-# mediapipe>=0.10.0
-
-# Streamlit extensions
-streamlit-webrtc>=0.48.0
-plotly>=5.17.0
-altair>=5.2.0
+# Visualization
+plotly==5.18.0
+altair==5.2.0
+seaborn==0.13.0
 
 # Database
-sqlalchemy>=2.0.0
-pymongo>=4.5.0
+sqlalchemy==2.0.23
+pymongo==4.5.0
+psycopg2-binary==2.9.9
 
-# Web3/Blockchain (commented out initially)
-# web3>=6.0.0
-# ipfshttpclient<=0.8.0a2  # Using alpha version for Python 3.13 compatibility
+# AI/ML (Lightweight versions)
+scikit-learn==1.3.2
+xgboost==2.0.3
+joblib==1.3.2
 
-# Additional utilities
-pyjwt>=2.8.0
-bcrypt>=4.0.0
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
+# NLP
+nltk==3.8.1
+spacy==3.7.2
+
+# LLMs (optional for now)
+langchain==0.1.0
+openai==1.3.8
+google-generativeai==0.3.2
+
+# Utilities
+python-dotenv==1.0.0
+pyjwt==2.8.0
+bcrypt==4.0.1
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+pillow==10.1.0
+pydantic==2.5.0
+
+# Streamlit extensions
+streamlit-option-menu==0.3.6
+streamlit-chat==0.1.0
+streamlit-tags==1.2.8
+
+# Data processing
+openpyxl==3.1.2
+pyarrow==14.0.1
