--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core dependencies
 streamlit==1.52.2
 pandas==2.2.0
-numpy==1.26.0
-python-dotenv==1.0.0
+scikit-learn
+pysqlite3-binary
 
 # Database
 sqlalchemy==2.0.23
