--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,8 @@ streamlit-authenticator==0.2.2
 pytest==7.4.3
 black==23.11.0
 flake8==6.1.0
+
+pysqlite3-binary
+import sys
+__import__('pysqlite3')
+sys.modules['sqlite3'] = sys.modules.pop('pysqlite3')
