--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,9 @@
-# Core dependencies
 streamlit==1.52.2
 pandas==2.2.0
 scikit-learn
 pysqlite3-binary
-
-# Database
-sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-alembic==1.13.1
-
-# Visualization
-plotly==5.18.0
-altair==5.2.0
-seaborn==0.13.0
-
-# AI/ML
-scikit-learn==1.3.2
-joblib==1.3.2
-nltk==3.8.1
-
-# Authentication & Security
-pyjwt==2.8.0
-bcrypt==4.0.1
-passlib==1.7.4
-
-# Web & API
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
-fastapi==0.104.1
-uvicorn==0.24.0
-
-# Utilities
-pydantic==2.5.0
-python-multipart==0.0.6
-chardet==5.2.0
-pillow==10.1.0
-openpyxl==3.1.2
-pyarrow==14.0.1
-
-# Streamlit extensions
-streamlit-option-menu==0.3.6
-streamlit-chat==0.1.0
-streamlit-tags==1.2.8
-streamlit-authenticator==0.2.2
-
-# Development
-pytest==7.4.3
-black==23.11.0
-flake8==6.1.0
-
-
+numpy
+matplotlib
+seaborn
+joblib
