--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.52.2
 pandas==2.2.0
-scikit-learn
-pysqlite3-binary
+scikit-learn==1.3.2
+numpy==1.24.3
+matplotlib==3.7.5
+seaborn==0.13.2
+joblib==1.3.2
+pysqlite3-binary==0.6.0
 psycopg2-binary==2.9.9
-numpy
-matplotlib
-seaborn
-joblib
