--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,48 @@
+# Core dependencies
 streamlit==1.52.2
 pandas==2.2.0
-numpy==1.26.4
-scikit-learn==1.3.2
-matplotlib==3.7.5
-seaborn==0.13.2
+numpy==2.0.2
+
+# Visualization
+plotly==6.0.1
+altair==5.3.0
+
+# Database
+sqlalchemy==2.0.32
+psycopg2-binary==2.9.10
+alembic==1.14.1
+
+# AI/ML - Using compatible versions
+scikit-learn==1.6.0  # Updated for Python 3.13 compatibility
+joblib==1.4.2
+
+# NLP
+nltk==3.9.2
+
+# Authentication & Security
+pyjwt==2.9.0
+bcrypt==4.2.1
+passlib==1.7.4
+
+# Web & API
+requests==2.32.3
+beautifulsoup4==4.13.3
+lxml==5.3.0
+fastapi==0.115.6
+uvicorn==0.34.0
+
+# Utilities
+pydantic==2.10.4
+python-multipart==0.0.16
+chardet==5.2.0
+pillow==11.1.0
+openpyxl==3.1.5
+pyarrow==17.0.0
+
+# Streamlit extensions
+streamlit-option-menu==0.3.17
+streamlit-chat==0.1.2
+
+# Additional utilities for compatibility
+typing-extensions==4.12.2
+python-dotenv==1.0.1
