--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 streamlit==1.32.0
-pandas==2.1.4
+pandas==1.5.3
+numpy==1.24.3
+matplotlib==3.7.4
+seaborn==0.12.2
+plotly==5.18.0  # Optional: for interactive charts
+openpyxl==3.1.2  # Optional: for Excel files
