--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
+# requirements.txt
 streamlit==1.32.0
-pandas==1.5.3
-numpy==1.24.3
-matplotlib==3.7.4
-seaborn==0.12.2
-plotly==5.18.0  # Optional: for interactive charts
-openpyxl==3.1.2  # Optional: for Excel files
+pandas==2.1.3
+numpy==1.26.4
