--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+# Core - use specific versions with pre-built wheels
 streamlit==1.52.2
-pandas==2.2.0
-numpy==2.0.2
-plotly==6.0.1
-altair==5.3.0
-python-dotenv==1.0.1
+pandas==2.1.4  # Older but stable version with pre-built wheels
+numpy==1.26.4  # Stable numpy version
+plotly==5.18.0
+altair==5.2.0
